@@ -1,3 +1,7 @@
+.409
+  - Add debugging to Ladybug.t to help diagnose platform issues
+  - Consolidated backing store type enumerations into StorageType.pm
+
 .408
   - Misc minor bug and doc fixes
 
